--- a/Blender.html
+++ b/Blender.html
@@ -44,7 +44,7 @@
         <div class="wrapper">
 
             <div class="movie">
-                <video id="video" onclick="" src="Movie/mati.mp4" autoplay loop muted></video>
+                <video id="video" onclick="" src="mati.mp4" autoplay loop muted></video>
                 <h3> テキストテキストテキスト</h3>
             </div>
         </div>
