--- a/Games.html
+++ b/Games.html
@@ -107,7 +107,7 @@
                             <p>ジャンル : <span id="genre">2D格闘</span></p>
                             <p>使用ツール : <span id="tool">Unity</span></p>
                             <p>作成期間 : <span id ="period">4ヶ月(内 3ヶ月)</span></p>
-                            <p>全作品ダウンロード : <a href="Download/前田翔志_作品集.zip">download</a></p>
+                            <p>全作品ダウンロード : <a href="https://github.com/shouji11/MyPortfoli.github.io/releases/tag/game">download</a></p>
                             
                         </div>
                     </div>          
