--- a/Games.html
+++ b/Games.html
@@ -107,8 +107,8 @@
                             <p>ジャンル : <span id="genre">2D格闘</span></p>
                             <p>使用ツール : <span id="tool">Unity</span></p>
                             <p>作成期間 : <span id ="period">4ヶ月(内 3ヶ月)</span></p>
-                            <p>全作品ダウンロード : <a href="https://github.com/shouji11/MyPortfoli.github.io/releases/tag/game">download</a></p>
-                            　
+                            <p>全作品ダウンロード : <a href="https://github.com/shouji11/MyPortfoli.github.io/releases/tag/game">ダウンロードページへ</a></p>
+                            
                         </div>
                     </div>          
                     
