テキスト部分変更

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
                 </li>
 
                 <li>
-                    <h2 class="contents-title">tex</h2>
+                    <h2 class="contents-title">not content</h2>
                     <div class="fadeTrigger deley_time4">
-                        <a href="">
+                        <a >
                             <img src="Img/blender/mati.png" alt="">
 
                         </a>
                 
                     </div>
-                    <p>テキストテキストテキスト</p>
+                    <p>not content</p>
                 </li>
 
             </ul>
