--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 class="section-title "> Profile </h1>
 
             <!--　プロフィール画像 -->
-            <img src="Img/IMG_0075.png" alt="">
+            <img src="Img/maeda.png" alt="">
 
             <!-- 　名前　 -->
             <h3>前田 翔志  maeda syouji</h3>
