--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 日本工学院専門学校でゲームプログラマとして4年間勉強をしてきました。<br>
                 卒業後は、就労移行に入り資格取得やweb制作にも興味をもち独学でwebポートフォリオを作成<br>
             </p>
-            <img class="skills_Img" src="skills.png" alt="">
+            <img class="skills_Img" src="Img/skills.png" alt="">
             <p>取得スキル:C++,C#,HTML,CSS,MOSExcelExpert</p>
             
 
