blenderページ更新

--- a/Blender.html
+++ b/Blender.html
@@ -34,7 +34,7 @@
     
                     </li>
                     <li>
-                        <img id="bimg_3" src="Img/blender/mati.png"alt="">
+                        <img id="bimg_3" src="Img/blender/synthwave.png"alt="">
     
                     </li>
                 </ul>   
