--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     
                         </div>
                     </div>
-                    <p>遊びで作ったサイト</p>
+                    <p>遊びで作ったサイト(※まだ入れない)</p>
                 </li>
 
             </ul>
