--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2 class="contents-title">Games</h2>    
                     <div class ="flex-item">
                         <div class="fadeTrigger deley_time2 content_wrap">
-                            <a href="about/Games.html">
+                            <a href="About/Games.html">
                                 <img src="Img/ScreenShot/2DFighting.jpg" alt="" >            
                             </a>
                     
@@ -127,7 +127,7 @@
                     <h2 class="contents-title">Blender</h2>
                     <div class ="flex-item">
                         <div class="fadeTrigger deley_time3 content_wrap">
-                            <a href="about/Blender.html">
+                            <a href="About/Blender.html">
                                 <img src="Img/blender/mati.jpg" alt="">
                             </a>
                     
